[package]
name = "super_rustycom_client"
version = "0.1.0"
authors = ["Santeri Salmijärvi <santeri.salmijarvi@aalto.fi>"]
edition = "2018"

[dependencies]
super-rustycom-core = { path = "../super-rustycom-core" }
chrono = "0.4"
fern = "0.6"
glium = "0.31"
imgui = { git = "https://github.com/imgui-rs/imgui-rs", rev = "592af95" }
imgui-glium-renderer = { git = "https://github.com/imgui-rs/imgui-rs", rev = "592af95" }
imgui-winit-support = { git = "https://github.com/imgui-rs/imgui-rs", rev = "592af95" }
itertools = "0.11"
log = "0.4"
nanoserde = "0.1"
pico-args = "0.5"
strum = { version = "0.25", features = ["derive"] }
